fixed spacing error
bottom color — in rest of logo section

--- a/TuitionTrack/style.css
+++ b/TuitionTrack/style.css
@@ -638,7 +638,7 @@ padding-bottom: 20px;}
 	border-radius: 60px;
 	display: block;}
 	
-#bottomcolor {margin-bottom: 70px;}
+.bottomcolor {margin-bottom: 70px;}
 
 /*---------------APPLICATIONS--------------------*/
 
